@@ -1,7 +1,11 @@
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
 public class Alimentar extends Produto {
     private boolean biologico;
     private ArrayList<String> certOuCat = new ArrayList<>();//certificados ou categorias
-    final String tipoDeTaxa;
+    private String tipoDeTaxa = "normal";
 
     public Alimentar(String codigo, String nome, String descricao, double precoSemIva, int quantidade, boolean biologico,  ArrayList<String> certOuCat) {
         super(codigo, nome, descricao, precoSemIva, quantidade);
@@ -31,18 +35,18 @@ public class Alimentar extends Produto {
     
     //fazer a condição de verificar o que está dentro do array certOuCat para decidir o tipo de taxa
     private void setTipoDeTaxa() {
-        ArrayList<String> certificados = {"ISO22000","FSSC22000","HACCP","GMP"};
-        ArrayList<String> categorias = {"Congelado", "Enlatado", "Vinho"};
-        int listSize= this.certOuCat.length;
+        List<String> certificados = List.of("ISO22000", "FSSC22000", "HACCP", "GMP");
+        List<String> categorias = List.of("Congelado", "Enlatado", "Vinho");
+        int listSize= this.certOuCat.size();
         if(listSize>0){
             for(String categoria: categorias){
-                if(this.certOuCat[0].equals(categoria) {//vamos assumir que se for categoria, nao precisamos de ver mais
+                if(this.certOuCat.get(0).equals(categoria)) {//vamos assumir que se for categoria, nao precisamos de ver mais
                     this.tipoDeTaxa = "intermédia";
                     break;
                 }
             }
             for(String categoria: categorias){
-                if(this.certOuCat[0].equals(categoria) {//como no mázimo so há 4, e nesta condição sabemos que existe pelo menos uma, nao precisamos de ver mais
+                if(this.certOuCat.get(0).equals(categoria)) {//como no mázimo so há 4, e nesta condição sabemos que existe pelo menos uma, nao precisamos de ver mais
                     this.tipoDeTaxa = "reduzida";
                     break;
                 }
@@ -54,13 +58,13 @@ public class Alimentar extends Produto {
     private int calcularTaxaExtra(){
         int taxaExtra = 0;
         if(this.tipoDeTaxa.equals("reduzida")){
-            ArrayList<String> certificacoesValidas = new ArrayList<>(List.of("ISO22000", "FSSC22000", "HACCP", "GMP"));
-            if (certOuCat.containsAll(certificacoesValidas)) {
+            String[] certificacoesValidas = {"ISO22000", "FSSC22000", "HACCP", "GMP"};
+            if (certOuCat.containsAll(Arrays.asList(certificacoesValidas))) {
                 taxaExtra -= 1; // Redução de 1%
             }
         }
         else if(this.tipoDeTaxa.equals("intermédia")){
-            if (certOuCat[0].equals("Vinho")) {
+            if (certOuCat.get(0).equals("Vinho")) {
                 taxaExtra += 1; // Aumento de 1%
             }
         }
@@ -72,14 +76,14 @@ public class Alimentar extends Produto {
         return taxaExtra;
     }
 
-    public int calcularTaxa(local){
+    public int calcularTaxa(String local){
         int taxaTotal = 0;
         if(local.equals("Portugal Continental"))   {
             if(this.tipoDeTaxa.equals("reduzida")){
                 taxaTotal = 6;
             }else if(this.tipoDeTaxa.equals("intermédia")) {
                 taxaTotal = 13;
-            }else if(this.tipoDeTaxa.equals("reduzida")) {
+            }else if(this.tipoDeTaxa.equals("normal")) {
                 taxaTotal = 23;
             }
         }
